--- a/my_toolstrip.html
+++ b/my_toolstrip.html
@@ -4,12 +4,20 @@
 <script type="text/javascript" src="resizer.js"></script>
 </head>
 <body>
-    <div class="ext" style="height:100%; width:100%;">
-	<div class="options" style="height:20px; width:200px; background-color:#ffffff;position:static;">
-	&nbsp;
+    <div class="ext" style="height:100%;clear:both">
+	<div class="options" style="height:150px; width:98%;">
+		<div class="toolstrip-button size" style="height:12px;">
+			540x400
+		</div>
+		<div class="toolstrip-button size" style="height:12px;">
+			800x600
+		</div>
+		<div class="toolstrip-button size" style="height:12px;">
+			1024x768
+		</div>
 	</div>
 <br/>
-	<div class="toolstrip-button" style="height:20px; position:relative;">
+	<div class="toolstrip-button main" style="height:12px;">
 	Resize
 	</div>
     </div>
